# talent-match-ai

./: .gitignore  README.md  flake.nix
backend/: .env.example  justfile  pyproject.toml
backend/example_data/naive_rag_comparison/: questions_ground_truths.json
backend/example_data/projects/: projects.json
backend/scripts/: check_db.py  common.py  compare_with_naive_rag.py  generate_cvs.py  generate_rfps.py
backend/src/: main.py
backend/src/api/v1/: master_router.py
backend/src/api/v1/endpoints/: admin.py  entities.py  info.py  ingest.py  matching.py  query.py
backend/src/core/: config.py  constants.py  models.py  utils.py
backend/src/core/models/: models.py
backend/src/repositories/: cv_repository.py  matching_repository.py  programmer_repository.py  project_repository.py  rfp_repository.py  system_repository.py
backend/src/services/: admin_service.py  ingest_cv.py  ingest_projects.py  ingest_rfp.py  neo4j_service.py  openai_service.py  query_service.py
backend/src/staffing_graphrag/core/: config.py
client/: justfile  pyproject.toml
client/src/: app.py
client/src/pages/: home.py  matching.py  programmers.py
client/src/staffing_graphrag_client/: config.py
client/src/staffing_graphrag_client/api/: client.py
client/src/staffing_graphrag_client/pages/: matching.py  programmers.py  query.py  rag_comparison.py  rfps.py  system_info.py
client/src/staffing_graphrag_client/utils/: utils.py
shared/src/shared_types/: matching_types.py  project_types.py  rfp_types.py
