[project]
name = "staffing-graphrag-client"
version = "0.1.0"
authors = [ ]
requires-python = "~=3.12.11"
dependencies = [
  "shared-types",
  "httpx>=0.28.1",
  "streamlit>=1.52.2",
  "load-dotenv>=0.1.0",
]

[tool.ruff]
indent-width = 2

[tool.uv.sources]
shared-types = { path = "../shared", editable = true }
